.gitignore fix for not including Logger.cs
Logger.cs was ignored by .gitignore *.log so I have added exclude for any .cs file so it should work now

--- a/.gitignore
+++ b/.gitignore
@@ -301,3 +301,6 @@ log*
 # should be stored in the .pubxml.user file.
 
 # End of https://www.gitignore.io/api/visualstudio
+
+# Exclude for Logger.cs
+!*.cs
