--- a/OPFService/App.config
+++ b/OPFService/App.config
@@ -1,25 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <startup>
-    <supportedRuntime version="v2.0.50727"/>
-  </startup>
+    
+  <supportedRuntime version="v2.0.50727"/></startup>
   <appSettings>
     <!-- Set client recognition request -->
     <add key="OPFClientRecognitionKeyword" value="haveIbeenPWNed"/>
     <!-- Set OPFDatabaseCheck to true to check hashes against database -->
-    <add key="OPFDatabaseCheck" value="true" />
+    <add key="OPFDatabaseCheck" value="true"/>
     <!-- Database server hostname, ip or instance name-->
-    <add key="OPFDatabaseServer" value="PwnDBServer\Instance" />
+    <add key="OPFDatabaseServer" value="PwnDBServer\Instance"/>
     <!-- Database server port, usually 1433 -->
-    <add key="OPFDatabasePort" value="1433" />
+    <add key="OPFDatabasePort" value="1433"/>
     <!-- Database name -->
-    <add key="OPFDatabaseName" value="PwnedPwdDB" />
+    <add key="OPFDatabaseName" value="PwnedPwdDB"/>
     <!-- Table or view name-->
-    <add key="OPFDatabaseTableName" value="Hashes" />
+    <add key="OPFDatabaseTableName" value="Hashes"/>
     <!-- Username to access server, read only access is enough-->
-    <add key="OPFDatabaseUserName" value="pwndbreader" />
+    <add key="OPFDatabaseUserName" value="pwndbreader"/>
     <!-- Password for user -->
-    <add key="OPFDatabasePassword" value="pwndbreaderpassword" />
+    <add key="OPFDatabasePassword" value="pwndbreaderpassword"/>
     <!-- Use trusted connection to connect to SQL server -->
     <add key="OPFUseTrustedConnection" value="false"/>
     <!-- Logging enabled -->
